improve appearance and solve the overlapping of left & right panel

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,11 @@ input[type='number']:focus:out-of-range {
 hr {
   border: 1px solid #cfcfcf;
 }
+
+div#root {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
