--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,10 @@
 .game-canvas {
   margin: auto;
   display: block;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .card {
@@ -19,21 +23,17 @@
 }
 
 .left-panel {
-  position: absolute;
-  left: 0;
-  top: 0;
   display: flex;
   flex-direction: column;
   max-width: 30%;
+  width: 30%;
 }
 
 .right-panel {
-  position: absolute;
-  right: 0;
-  top: 0;
   display: flex;
   flex-direction: column;
   max-width: 30%;
+  width: 30%;
 }
 
 .players-panel ul {
